# ts-ids-validator

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  MANIFEST.in  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: code_quality.yml  publish.yml
__test__/integration/: test_generic_validator.py
__test__/integration/example-output/generic_validator/: failed_props.json
__test__/integration/snapshots/: snap_test_generic_validator.py
__test__/unit/generic/: test_additional_property_checks.py  test_athena_checks.py  test_data_cubes_check.py  test_required_property_checks.py  test_root_node_check.py  test_type_check.py
__test__/unit/generic/files/additional_property/: additional_property_type_conflict.json
__test__/unit/v1/: test_child_name_check.py  test_samples_node.py  test_snake_case_check.py  test_systems_node.py  test_user_node.py
__tests__/integration/: test_generic_validator.py  test_validate_ids.py
__tests__/integration/example-input/generic_validator/: schema.json
__tests__/integration/example-output/generic_validator/: failed_props.json
__tests__/integration/snapshots/: snap_test_generic_validator.py
__tests__/unit/generic/: test_additional_property_checks.py  test_athena_checks.py  test_athena_path_normalization.py  test_datacubes_check.py  test_es_checker.py  test_required_property_checks.py  test_root_node_check.py  test_type_check.py
__tests__/unit/v1/: test_child_name_check.py  test_related_files_node.py  test_samples_node.py  test_snake_case_check.py  test_systems_node.py  test_user_node.py
__tests__/unit/validate_ids/: test_validate_ids.py
dev/: rough_work.ipynb  schema.json
ids_validator/: __main__.py  convention_versions.py  ids_node.py  ids_validator.py  main.py  utils.py  validator.py
ids_validator/checks/: __init__.py  abstract_checker.py  rules_checker.py
ids_validator/checks/generic/: __init__.py  additional_property.py  athena.py  datacubes.py  elasticsearch.py  required_property.py  root_node.py  type_check.py
ids_validator/checks/v1/: __init__.py  child_name.py  convention_version_check.py  nodes_checker.py  related_files_checker.py  root_node.py  snake_case.py
ids_validator/checks/v1/rules/: systems.py  users.py
ids_validator/templates/: athena.json  related_files.json
src/: convention_versions.py  ids_node.py  utils.py  validator.py
src/checks/: __init__.py  abstract_checker.py  rules_checker.py
src/checks/generic/: __init__.py  additional_property.py  athena.py  datacubes.py  elasticsearch.py  required_property.py  root_node.py  type_check.py
src/checks/v1/: __init__.py  child_name.py  convention_version_check.py  nodes_checker.py  related_files_checker.py  root_node.py  snake_case.py
src/checks/v1/rules/: systems.py  users.py
src/checks/v1/rules/samples/: __init__.py  (+4 more)
ts_ids_validator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+121 files in other folders)
