[tool.poetry]
name = "ts-ids-validator"
version = "1.0.0"
description = ""
authors = ["tetrascience <developers@tetrascience.com>"]
license = "Apache License 2.0"
homepage = "https://github.com/tetrascience/ts-ids-validator"
repository = "https://github.com/tetrascience/ts-ids-validator"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ids_validator*" }
]
readme = 'README.md'

[tool.poetry.scripts]
ids_validator = 'ids_validator.main:run'

[tool.poetry.dependencies]
python = "^3.7"
jsonref = "*"
pydash = "*"
rich = "*"
ts-ids-es-json-generator = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
snapshottest = "^0.6.0"
autopep8 = "^1.6.0"

[tool.poetry.urls]
"Tetra Developer Site" = "https://developers.tetrascience.com"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
