[tool.poetry]
name = "ts-ids-validator"
version = "0.9.12"
description = "Python utility for validating IDS"
authors = ["TetraScience <developers@tetrascience.com>"]
packages = [
    { include = "ids_validator" }
]
repository = "https://github.com/tetrascience/ts-ids-validator"
homepage = "https://developers.tetrascience.com"
readme = "README.md"
license = "Apache-2.0"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
jsonref = "*"
pydash = "*"
rich = "*"
jsonschema = ">4.0.0"
ts-ids-es-json-generator = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
snapshottest = "~=0.6.0"
black = ">=22.1.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
extend-exclude = "snapshots"


[tool.pytest.ini_options]
testpaths = [
    "__tests__"
]

[tool.coverage.run]
branch = true
source = [
    "ids_validator"
]
omit = ["snapshots"]

# Many options copied from the docs here:
# https://coverage.readthedocs.io/en/coverage-5.5/config.html#syntax
[tool.coverage.report]
show_missing = true
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]
ignore_errors = true
